# MBT

./: .gitignore  README.md  pyproject.toml
configs/: sft.yaml
configs/accelerate/: fsdp.yaml  fsdp_qlora.yaml  single_gpu.yaml
configs/vllm/: deepseek-v4-flash.yaml  gemma-4-26b-a4b-it.yaml  gemma-4-31b-it.yaml  glm-4.7-flash.yaml  gpt-oss-120b.yaml  gpt-oss-20b.yaml  llama-4-scout-fp8.yaml  mistral-small-4.yaml  nemotron-3-nano-30b-a3b-bf16.yaml  nemotron-3-nano-4b-bf16.yaml  nemotron-3-super-120b-a12b-fp8.yaml  qwen3-0.6b.yaml  qwen3-1.7b.yaml  qwen3-14b.yaml  qwen3-235b-a22b-fp8.yaml  qwen3-30b-a3b.yaml  qwen3-32b.yaml  qwen3-4b.yaml  qwen3-8b.yaml  qwen3.5-0.8b.yaml  qwen3.5-122b-a10b-fp8.yaml  qwen3.5-27b.yaml  qwen3.5-2b.yaml  qwen3.5-35b-a3b.yaml  qwen3.5-397b-a17b-fp8.yaml  qwen3.5-4b.yaml  qwen3.5-9b.yaml  qwen3.6-27b.yaml  qwen3.6-35b-a3b.yaml
configs/vllm/templates/: gpt-oss-continuation.jinja  qwen3-continuation.jinja
scripts/: build_difficulty.py  download.py  setup_auth.sh
scripts/slurm/: archive.slurm  download.slurm  main.slurm  sft.slurm  vllm.slurm
scripts/tasks/local/: answer_hit.sh  build_difficulty.sh  evaluation.sh  mbt_r.sh  mbt_s.sh  mqi_score.sh  rollout.sh  rrp_score.sh  sft.sh  solution.sh
scripts/tasks/slurm/: answer_hit.sh  build_difficulty.sh  evaluation.sh  mbt_r.sh  mbt_s.sh  mqi_score.sh  rollout.sh  rrp_score.sh  sft.sh  solution.sh
src/mbt/: main.py  registry.py
src/mbt/apis/openai/: chat.py
src/mbt/apis/vllm/: chat.py
src/mbt/tasks/: 2wikimultihopqa.py  hotpotqa.py  musique.py
src/mbt/tasks/qa/: _marker_utils.py  answer_hit.py  evaluation.py  mbt_r.py  metrics.py  mqi_score.py  prompt_templates.py  rrp_score.py
src/mbt/train/: chat_templates.py  sft.py
